--- a/after.html
+++ b/after.html
@@ -3,7 +3,10 @@
      * Hack to include paralax background and reveal.js-menu
      */
     Reveal.initialize({
-      parallaxBackgroundImage: "background.png"
+      parallaxBackgroundImage: 'https://raw.githubusercontent.com/areedv/strat/master/background.png',
+      parallaxBackgroundSize: '100%',
+      parallaxBackgroundHorizontal: 0,
+	    parallaxBackgroundVertical: 0
       /*
        * This does not work at the moment:
        dependencies: [
