--- a/inst/after.html
+++ b/inst/after.html
@@ -4,7 +4,7 @@
      */
     Reveal.initialize({
       parallaxBackgroundImage: 'https://raw.githubusercontent.com/areedv/strat/master/inst/figs/background.png',
-      parallaxBackgroundSize: '100%',
+      parallaxBackgroundSize: 'contain',
       parallaxBackgroundHorizontal: 1,
 	    parallaxBackgroundVertical: 1
       /*
